--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@charser "UTF-8"
+@charset "UTF-8";
 
 /* 共通部分 */
 html {
@@ -196,7 +196,7 @@ body {
   border:4px solid;
   border-radius:50%;
   color:#f1b400;
-  font-size:6rem;
+  font-size:8rem;
   line-height:142px;
 }
 .skill-title{
@@ -252,4 +252,78 @@ body {
 .footer{
   padding:12px 0;
   font-size:1.3rem;
+}
+/* smartphone */
+@media (max-width:1024px) {
+  body {
+    background-image:none;
+  }
+}
+@media (max-width:768px) {
+  body{
+    font-size:1.3rem;
+  }
+  .site-title-sub::before,
+  .site-title-sub:after {
+    display:block;
+    width:80%;
+    margin:10px auto;
+  }
+  .site-title-sub{
+    font-size:1.7rem;
+  }
+  .site-title{
+    margin-top:35px;
+    font-size:5rem;
+  }
+  .header{
+    padding-top:60px;
+  }
+  .button:hover{
+    opacity:1;
+  }
+  .heading{
+    font-size:2.5rem;
+  }
+  .about-text{
+    line-height:1.8;
+  }
+  .works-wrapper,
+  .work-box {
+    display:block;
+  }
+  .work-image {
+    display:none;
+  }
+  .work-description{
+    position:relative;
+  }
+  .work-box::after {
+    top:0;
+    height:100%;
+    background-size:cover;
+    transform:none;
+  }
+  .skills-wrapper,
+  .skill-box{
+    display:block;
+  }
+  .skill-icon{
+    width:100px;
+    height:100px;
+    font-size:5rem;
+    line-height:92px;
+  }
+  .skill-box {
+    margin:40px auto;
+  }
+  .skill-text{
+    margin:0;
+  }
+  .contact-form{
+    width:80%;
+  }
+  .contact{
+    padding-bottom:80px;
+  }
 }
